--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,15 +1,11 @@
-{% include 'recipes/partials/head.html' %}
+{% extends "global/base.html" %}
+{% block title %}Home {% endblock title %}
+{% block content %}
 
-<body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fa-regular fa-address-book main-logo-icon"></i>
-                    <span class="main-logo-text">Recipes</span>
-                </a>
-            </h1>
-        </div>    
-    </header>
-</body>
-</html>
+<div class="main-content main-content-list container">
+    {% for recipe in recipes %}
+        {% include 'recipes/partials/recipe.html' %}
+    {% endfor %}
+</div>
+
+{% endblock content %}
